--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@ main {
     margin: 0 auto;
     text-align: center;
 }
+
+button {
+    background-color: transparent;
+    color: #eeeeee80;
+    border:0;
+    display: inline-block;
+    width: 100px;
+
+}
