--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ button {
     border:0;
     display: inline-block;
     width: 100px;
+    cursor: pointer;
 
 }
 
@@ -26,3 +27,10 @@ button.with-text{
     font-size: 1.4rem;
     line-height: 36px;
 }
+
+button.with-text svg{
+    width: 36px;
+    float: left;
+    margin-right: 5px;
+}
+
