--- a/src/slider.css
+++ b/src/slider.css
@@ -1,14 +1,23 @@
 .slider {
     height: 40px;
-    border: 2px solid red;
+    border: 2px solid var(--red);
     border-radius: 20px;
 
 }
 
 .thumb{
-    background-color: red;
+    background-color: var(--red);
     cursor: pointer;
     width: 40px;
     height: 40px;
     border-radius: 20px;
+}
+
+.slider.green{
+    border: 2px solid var(--green);
+
+}
+
+.slider.green .thumb{
+    background-color: var(--green);
 }
